# flask_skeleton

./: Dockerfile  README.md  app.py  docker-run.sh  pyproject.toml  split.py
