[tool.poetry]
name = "flask_skeleton"
version = "0.1.0"
description = ""
authors = ["John <john@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
flask_restful = "^0.3.7"
flask_cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
